# sui-trace

./: .env.example  .gitignore  Cargo.toml  README.md
config/: default.toml
crates/trace-alert/: Cargo.toml
crates/trace-alert/src/: dedup.rs  engine.rs  lib.rs
crates/trace-alert/src/channels/: discord.rs  email.rs  mod.rs  telegram.rs  webhook.rs
crates/trace-alert/src/rules/: address_activity.rs  high_severity_package.rs  large_outflow.rs  mod.rs  package_upgrade.rs  suspicious_recipient.rs  tvl_drop.rs
crates/trace-analytics/: Cargo.toml
crates/trace-analytics/src/: lib.rs  scheduler.rs  tvl.rs
crates/trace-analytics/src/jobs/: active_projects.rs  daily_deploy.rs  mod.rs
crates/trace-api/: Cargo.toml
crates/trace-api/src/: auth.rs  lib.rs  main.rs  state.rs  ws.rs
crates/trace-api/src/graphql/: mod.rs
crates/trace-api/src/routes/: address.rs  auth.rs  checkpoint.rs  health.rs  labels.rs  mod.rs  network.rs  packages.rs  protocols.rs  search.rs  security.rs  source.rs  stats.rs  tx.rs  watch.rs  watchlist.rs
crates/trace-cli/: Cargo.toml
crates/trace-cli/src/: main.rs
crates/trace-common/: Cargo.toml
crates/trace-common/src/: config.rs  error.rs  lib.rs  model.rs  telemetry.rs  time.rs
crates/trace-indexer/: Cargo.toml
crates/trace-indexer/examples/: smoke.rs
crates/trace-indexer/src/: client.rs  lib.rs  model.rs  pipeline.rs  runner.rs
crates/trace-indexer/src/pipelines/: balance_changes.rs  checkpoints.rs  events.rs  mod.rs  objects.rs  packages.rs  transactions.rs
crates/trace-labels/: Cargo.toml
crates/trace-labels/src/: importers.rs  lib.rs  service.rs
crates/trace-security/: Cargo.toml
crates/trace-security/src/: context.rs  engine.rs  lib.rs  report.rs  worker.rs
crates/trace-security/src/rules/: mod.rs  r001_visibility_confusion.rs  r002_missing_sender_check.rs  r003_clock_unit_mismatch.rs  r004_arithmetic_overflow.rs  r005_unsafe_share_object.rs  r006_capability_leak.rs  r007_untrusted_external_call.rs  r008_dos_unbounded_loop.rs  r009_random_misuse.rs  r010_upgrade_policy_loose.rs
crates/trace-storage/: Cargo.toml
crates/trace-storage/src/: cache.rs  db.rs  lib.rs
crates/trace-storage/src/repo/: alerts.rs  analytics.rs  checkpoints.rs  events.rs  labels.rs  mod.rs  packages.rs  protocols.rs  security.rs  source.rs  transactions.rs  tvl.rs  users.rs  watchlists.rs
deploy/: Dockerfile.api  Dockerfile.indexer  Dockerfile.web  docker-compose.yml  nginx.conf  prometheus.yml
deploy/grafana/dashboards/: sui-trace.json
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  api-deployment.yaml  ingress.yaml  secrets.yaml  web-deployment.yaml  workers.yaml
docs/: api.md  architecture.md  openapi.yaml  security-rules.md
migrations/: 20260101000000_init.sql  20260101010000_timescale.sql  20260101020000_seed_protocols.sql  20260101030000_package_versions_and_sources.sql  20260101040000_protocol_watchlist.sql
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx  routeTree.tsx  styles.css
web/src/components/: Badge.tsx  Card.tsx  CommandPalette.tsx  CopyButton.tsx  Hash.tsx  JsonView.tsx  Layout.tsx  Loader.tsx  Mono.tsx  MoveSource.tsx  Pagination.tsx  SeverityPill.tsx  Skeleton.tsx  Sparkline.tsx  Tabs.tsx  Toast.tsx  TvlSparkline.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts  auth.ts  format.ts
web/src/pages/: ActivePage.tsx  AddressPage.tsx  AlertsPage.tsx  CheckpointPage.tsx  CheckpointsPage.tsx  DeploymentsPage.tsx  HomePage.tsx  LabelsPage.tsx  LoginPage.tsx  NetworkPage.tsx  PackagePage.tsx  PackagesPage.tsx  SearchPage.tsx  SecurityPage.tsx  TvlPage.tsx  TxPage.tsx  WatchPage.tsx  WatchProtocolPage.tsx  WatchlistPage.tsx
