[package]
name = "trace-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trace-common.workspace = true
trace-storage.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
sqlx.workspace = true

[[bin]]
name = "trace-analytics"
path = "src/bin/analytics.rs"

