[package]
name = "trace-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trace-common.workspace = true
trace-storage.workspace = true
trace-labels.workspace = true
trace-alert.workspace = true
trace-analytics.workspace = true
trace-indexer.workspace = true
trace-security.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
futures.workspace = true
parking_lot.workspace = true

[[bin]]
name = "trace-api"
path = "src/main.rs"
