[package]
name = "trace-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trace-common.workspace = true
trace-storage.workspace = true
trace-indexer.workspace = true
trace-labels.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true

[[bin]]
name = "trace"
path = "src/main.rs"
